# trex

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/example1/: benchmark_collection.sh  conftest.py  pyproject.toml
examples/example1/math_calcs/: __init__.py  operations.py
examples/example1/tests/: test_operations.py
src/: main.rs
tests/: collect_integration.rs  init_integration.rs
